fixed footer overlap with the faves list in the options page

--- a/src/styles/options.css
+++ b/src/styles/options.css
@@ -60,7 +60,7 @@ h2 {
 
 .fave-list {
   width: 960px;
-  margin: 0 auto;
+  margin: 0 auto 80px;
 }
 
 h3 {
